--- a/index.html
+++ b/index.html
@@ -1,204 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<title>Keyboard Piano</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Keyboard Piano</title>
 
-<style>
-body {
-    background: radial-gradient(circle at top, #111 0%, #000 70%);
-    font-family: system-ui, sans-serif;
-    color: white;
-    text-align: center;
-    padding: 40px;
-}
+    <style>
+      body {
+        background: radial-gradient(circle at top, #111 0%, #000 70%);
+        font-family: system-ui, sans-serif;
+        color: white;
+        text-align: center;
+        padding: 40px;
+      }
 
-h1 {
-    margin-bottom: 20px;
-    font-weight: 600;
-}
+      h1 {
+        margin-bottom: 20px;
+        font-weight: 600;
+      }
 
-.piano {
-    display: flex;
-    justify-content: center;
-    gap: 6px;
-    margin-top: 40px;
-}
+      .piano {
+        display: flex;
+        justify-content: center;
+        gap: 6px;
+        margin-top: 40px;
+      }
 
-.key {
-    width: 60px;
-    height: 220px;
-    background: linear-gradient(#fff, #ddd);
-    border-radius: 8px;
-    box-shadow:
-        inset 0 -6px 0 #bbb,
-        0 10px 30px rgba(0,0,0,.6);
-    position: relative;
-    cursor: pointer;
-    transition: all 0.08s ease;
-}
+      .key {
+        width: 60px;
+        height: 220px;
+        background: linear-gradient(#fff, #ddd);
+        border-radius: 8px;
+        box-shadow: inset 0 -6px 0 #bbb, 0 10px 30px rgba(0, 0, 0, 0.6);
+        position: relative;
+        cursor: pointer;
+        transition: all 0.08s ease;
+      }
 
-.key span {
-    position: absolute;
-    bottom: 12px;
-    width: 100%;
-    text-align: center;
-    font-weight: bold;
-    color: #333;
-}
+      .key span {
+        position: absolute;
+        bottom: 12px;
+        width: 100%;
+        text-align: center;
+        font-weight: bold;
+        color: #333;
+      }
 
-.key.active {
-    background: linear-gradient(#4cf, #29b);
-    box-shadow:
-        0 0 25px #3cf,
-        inset 0 -4px 0 #1a8;
-    transform: translateY(4px);
-}
+      .key.active {
+        background: linear-gradient(#4cf, #29b);
+        box-shadow: 0 0 25px #3cf, inset 0 -4px 0 #1a8;
+        transform: translateY(4px);
+      }
 
-.controls {
-    margin-top: 40px;
-}
+      .controls {
+        margin-top: 40px;
+      }
 
-button {
-    background: #222;
-    color: #fff;
-    border: 1px solid #555;
-    padding: 10px 20px;
-    margin: 6px;
-    border-radius: 6px;
-    cursor: pointer;
-}
+      button {
+        background: #222;
+        color: #fff;
+        border: 1px solid #555;
+        padding: 10px 20px;
+        margin: 6px;
+        border-radius: 6px;
+        cursor: pointer;
+      }
 
-button:hover {
-    background: #333;
-}
-</style>
-</head>
+      button:hover {
+        background: #333;
+      }
+    </style>
+  </head>
 
-<body>
+  <body>
+    <h1>🎹 Keyboard Piano</h1>
+    <p>Use keys: Q W E R T Y U I O P [ ] \</p>
 
-<h1>🎹 Keyboard Piano</h1>
-<p>Use keys: Q W E R T Y U I O P [ ] \</p>
+    <div class="piano" id="piano"></div>
 
-<div class="piano" id="piano"></div>
+    <div class="controls">
+      <button onclick="playMelody('scale')">Play Scale</button>
+      <button onclick="playMelody('twinkle')">Play Melody</button>
+    </div>
 
-<div class="controls">
-    <button onclick="playMelody('scale')">Play Scale</button>
-    <button onclick="playMelody('twinkle')">Play Melody</button>
-</div>
+    <script>
+      const AudioContext = window.AudioContext || window.webkitAudioContext;
+      const audioCtx = new AudioContext();
 
-<script>
-const AudioContext = window.AudioContext || window.webkitAudioContext;
-const audioCtx = new AudioContext();
+      /* ===== MASTER AUDIO CHAIN ===== */
 
-const keyMap = [
-    { key: 'q', note: 261.63 }, // C4
-    { key: 'w', note: 293.66 },
-    { key: 'e', note: 329.63 },
-    { key: 'r', note: 349.23 },
-    { key: 't', note: 392.00 },
-    { key: 'y', note: 440.00 },
-    { key: 'u', note: 493.88 },
-    { key: 'i', note: 523.25 },
-    { key: 'o', note: 587.33 },
-    { key: 'p', note: 659.25 },
-    { key: '[', note: 698.46 },
-    { key: ']', note: 783.99 },
-    { key: '\\', note: 880.00 }
-];
+      const masterGain = audioCtx.createGain();
+      masterGain.gain.value = 0.5;
 
-const activeNotes = new Map();
-const piano = document.getElementById('piano');
+      const compressor = audioCtx.createDynamicsCompressor();
+      compressor.threshold.value = -24;
+      compressor.knee.value = 30;
+      compressor.ratio.value = 12;
+      compressor.attack.value = 0.003;
+      compressor.release.value = 0.25;
 
-keyMap.forEach(k => {
-    const div = document.createElement('div');
-    div.className = 'key';
-    div.dataset.key = k.key;
+      const lowpass = audioCtx.createBiquadFilter();
+      lowpass.type = "lowpass";
+      lowpass.frequency.value = 6000;
 
-    div.innerHTML = `<span>${k.key.toUpperCase()}</span>`;
+      masterGain
+        .connect(compressor)
+        .connect(lowpass)
+        .connect(audioCtx.destination);
 
-    div.addEventListener('mousedown', () => startNote(k.key));
-    div.addEventListener('mouseup', () => stopNote(k.key));
-    div.addEventListener('mouseleave', () => stopNote(k.key));
+      const keyMap = [
+        { key: "q", note: 261.63 }, // C4
+        { key: "w", note: 293.66 },
+        { key: "e", note: 329.63 },
+        { key: "r", note: 349.23 },
+        { key: "t", note: 392.0 },
+        { key: "y", note: 440.0 },
+        { key: "u", note: 493.88 },
+        { key: "i", note: 523.25 },
+        { key: "o", note: 587.33 },
+        { key: "p", note: 659.25 },
+        { key: "[", note: 698.46 },
+        { key: "]", note: 783.99 },
+        { key: "\\", note: 880.0 },
+      ];
 
-    piano.appendChild(div);
-});
+      const activeNotes = new Map();
+      const piano = document.getElementById("piano");
 
-function startNote(key) {
-    if (activeNotes.has(key)) return;
+      keyMap.forEach((k) => {
+        const div = document.createElement("div");
+        div.className = "key";
+        div.dataset.key = k.key;
 
-    audioCtx.resume();
+        div.innerHTML = `<span>${k.key.toUpperCase()}</span>`;
 
-    const freq = keyMap.find(k => k.key === key)?.note;
-    if (!freq) return;
+        div.addEventListener("mousedown", () => startNote(k.key));
+        div.addEventListener("mouseup", () => stopNote(k.key));
+        div.addEventListener("mouseleave", () => stopNote(k.key));
 
-    const osc = audioCtx.createOscillator();
-    const gain = audioCtx.createGain();
+        piano.appendChild(div);
+      });
 
-    osc.type = 'sine';
-    osc.frequency.value = freq;
+      function startNote(key) {
+        if (activeNotes.has(key)) return;
 
-    gain.gain.setValueAtTime(0.001, audioCtx.currentTime);
-    gain.gain.exponentialRampToValueAtTime(0.4, audioCtx.currentTime + 0.02);
+        audioCtx.resume();
 
-    osc.connect(gain).connect(audioCtx.destination);
-    osc.start();
+        const freq = keyMap.find((k) => k.key === key)?.note;
+        if (!freq) return;
 
-    activeNotes.set(key, { osc, gain });
-    setKeyActive(key, true);
-}
+        const osc = audioCtx.createOscillator();
+        const gain = audioCtx.createGain();
 
-function stopNote(key) {
-    const note = activeNotes.get(key);
-    if (!note) return;
+        osc.type = "sine";
+        osc.frequency.value = freq;
 
-    note.gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.08);
-    note.osc.stop(audioCtx.currentTime + 0.09);
+        const now = audioCtx.currentTime;
 
-    activeNotes.delete(key);
-    setKeyActive(key, false);
-}
+        // CLEAN ENVELOPE
+        gain.gain.cancelScheduledValues(now);
+        gain.gain.setValueAtTime(0, now);
+        gain.gain.linearRampToValueAtTime(0.15, now + 0.05);
 
-function setKeyActive(key, active) {
-    const el = document.querySelector(`.key[data-key="${key}"]`);
-    if (el) el.classList.toggle('active', active);
-}
+        osc.connect(gain).connect(masterGain);
+        osc.start();
 
-/* Keyboard events */
-document.addEventListener('keydown', e => {
-    if (!e.repeat) startNote(e.key.toLowerCase());
-});
+        activeNotes.set(key, { osc, gain });
+        setKeyActive(key, true);
+      }
 
-document.addEventListener('keyup', e => {
-    stopNote(e.key.toLowerCase());
-});
+      function stopNote(key) {
+        const note = activeNotes.get(key);
+        if (!note) return;
 
-/* Built-in melodies */
-const melodies = {
-    scale: [
-        ['q', 300], ['w', 300], ['e', 300], ['r', 300],
-        ['t', 300], ['y', 300], ['u', 300], ['i', 300]
-    ],
-    twinkle: [
-        ['q', 400], ['q', 400], ['t', 400], ['t', 400],
-        ['y', 400], ['y', 400], ['t', 800],
-        ['r', 400], ['r', 400], ['e', 400], ['e', 400],
-        ['w', 400], ['w', 400], ['q', 800]
-    ]
-};
+        const now = audioCtx.currentTime;
 
-async function playMelody(name) {
-    for (const [key, duration] of melodies[name]) {
-        startNote(key);
-        await wait(duration);
-        stopNote(key);
-    }
-}
+        note.gain.gain.cancelScheduledValues(now);
+        note.gain.gain.setValueAtTime(note.gain.gain.value, now);
+        note.gain.gain.linearRampToValueAtTime(0, now + 0.25);
 
-function wait(ms) {
-    return new Promise(res => setTimeout(res, ms));
-}
-</script>
+        note.osc.stop(now + 0.3);
 
-</body>
+        activeNotes.delete(key);
+        setKeyActive(key, false);
+      }
+
+      function setKeyActive(key, active) {
+        const el = document.querySelector(`.key[data-key="${key}"]`);
+        if (el) el.classList.toggle("active", active);
+      }
+
+      /* Keyboard events */
+      document.addEventListener("keydown", (e) => {
+        if (!e.repeat) startNote(e.key.toLowerCase());
+      });
+
+      document.addEventListener("keyup", (e) => {
+        stopNote(e.key.toLowerCase());
+      });
+
+      /* Built-in melodies */
+      const melodies = {
+        scale: [
+          ["q", 300],
+          ["w", 300],
+          ["e", 300],
+          ["r", 300],
+          ["t", 300],
+          ["y", 300],
+          ["u", 300],
+          ["i", 300],
+        ],
+        twinkle: [
+          ["q", 400],
+          ["q", 400],
+          ["t", 400],
+          ["t", 400],
+          ["y", 400],
+          ["y", 400],
+          ["t", 800],
+          ["r", 400],
+          ["r", 400],
+          ["e", 400],
+          ["e", 400],
+          ["w", 400],
+          ["w", 400],
+          ["q", 800],
+        ],
+      };
+
+      async function playMelody(name) {
+        for (const [key, duration] of melodies[name]) {
+          startNote(key);
+          await wait(duration);
+          stopNote(key);
+        }
+      }
+
+      function wait(ms) {
+        return new Promise((res) => setTimeout(res, ms));
+      }
+    </script>
+  </body>
 </html>
