--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Keyboard Piano</title>
+    <div class="melody-grid" id="melodyGrid"></div>
 
     <style>
       body {
@@ -39,7 +40,6 @@
       .key span {
         position: absolute;
         bottom: 12px;
-        width: 100%;
         text-align: center;
         font-weight: bold;
         color: #333;
@@ -68,6 +68,66 @@
       button:hover {
         background: #333;
       }
+
+      body {
+        background: radial-gradient(
+            circle at top,
+            rgba(255, 255, 255, 0.15),
+            transparent 60%
+          ),
+          url("https://images.unsplash.com/photo-1544273677-c433136021d4?q=80&w=1920")
+            center/cover fixed;
+        overflow-x: hidden;
+      }
+
+      /* Snow container */
+      .snow {
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        z-index: 5;
+      }
+
+      .snowflake {
+        position: absolute;
+        top: -10px;
+        color: white;
+        opacity: 0.8;
+        font-size: 12px;
+        animation: fall linear infinite;
+      }
+
+      @keyframes fall {
+        to {
+          transform: translateY(110vh);
+        }
+      }
+
+      /* Melody cards */
+      .melody-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        gap: 20px;
+        margin-top: 50px;
+        max-width: 900px;
+        margin-inline: auto;
+      }
+
+      .melody-card {
+        background: rgba(0, 0, 0, 0.6);
+        border-radius: 16px;
+        padding: 20px;
+        box-shadow: 0 0 30px rgba(0, 255, 255, 0.15);
+        backdrop-filter: blur(6px);
+      }
+
+      .melody-card h3 {
+        margin: 0 0 12px;
+      }
+
+      .melody-card button {
+        width: 48%;
+      }
     </style>
   </head>
 
@@ -89,14 +149,14 @@
       /* ===== MASTER AUDIO CHAIN ===== */
 
       const masterGain = audioCtx.createGain();
-      masterGain.gain.value = 0.5;
+      masterGain.gain.value = 0.6;
 
       const compressor = audioCtx.createDynamicsCompressor();
-      compressor.threshold.value = -24;
-      compressor.knee.value = 30;
-      compressor.ratio.value = 12;
+      compressor.threshold.value = -30;
+      compressor.knee.value = 40;
+      compressor.ratio.value = 16;
       compressor.attack.value = 0.003;
-      compressor.release.value = 0.25;
+      compressor.release.value = 0.35;
 
       const lowpass = audioCtx.createBiquadFilter();
       lowpass.type = "lowpass";
@@ -107,46 +167,63 @@
         .connect(lowpass)
         .connect(audioCtx.destination);
 
+      /* ===== KEY MAP ===== */
+
       const keyMap = [
-        { key: "q", note: 261.63 }, // C4
-        { key: "w", note: 293.66 },
-        { key: "e", note: 329.63 },
-        { key: "r", note: 349.23 },
-        { key: "t", note: 392.0 },
-        { key: "y", note: 440.0 },
-        { key: "u", note: 493.88 },
-        { key: "i", note: 523.25 },
-        { key: "o", note: 587.33 },
-        { key: "p", note: 659.25 },
-        { key: "[", note: 698.46 },
-        { key: "]", note: 783.99 },
-        { key: "\\", note: 880.0 },
+        { keys: ["q"], note: 261.63 }, // C4
+        { keys: ["w"], note: 293.66 },
+        { keys: ["e"], note: 329.63 },
+        { keys: ["r"], note: 349.23 },
+        { keys: ["t"], note: 392.0 },
+        { keys: ["y", "z"], note: 440.0 }, // Y / Z
+        { keys: ["u"], note: 493.88 },
+        { keys: ["i"], note: 523.25 },
+        { keys: ["o"], note: 587.33 },
+        { keys: ["p"], note: 659.25 },
+        { keys: ["[", "š"], note: 698.46 }, // [ / Š
+        { keys: ["]", "đ"], note: 783.99 }, // ] / Đ
+        { keys: ["\\", "ž"], note: 880.0 }, // \ / Ž
       ];
 
       const activeNotes = new Map();
       const piano = document.getElementById("piano");
 
+      /* ===== UI KEYS (use first label only) ===== */
+
       keyMap.forEach((k) => {
         const div = document.createElement("div");
         div.className = "key";
-        div.dataset.key = k.key;
+        div.dataset.key = k.keys[0];
 
-        div.innerHTML = `<span>${k.key.toUpperCase()}</span>`;
+        div.innerHTML = `<span>${k.keys[0].toUpperCase()}</span>`;
 
-        div.addEventListener("mousedown", () => startNote(k.key));
-        div.addEventListener("mouseup", () => stopNote(k.key));
-        div.addEventListener("mouseleave", () => stopNote(k.key));
+        div.addEventListener("mousedown", () => startNote(k.keys[0]));
+        div.addEventListener("mouseup", () => stopNote(k.keys[0]));
+        div.addEventListener("mouseleave", () => stopNote(k.keys[0]));
 
         piano.appendChild(div);
       });
+
+      /* ===== LOUDNESS COMPENSATION ===== */
+
+      function loudnessCompensation(freq) {
+        const reference = 440;
+        return Math.pow(reference / freq, 0.3);
+      }
+
+      function findNoteByKey(key) {
+        return keyMap.find((k) => k.keys.includes(key));
+      }
 
       function startNote(key) {
         if (activeNotes.has(key)) return;
 
         audioCtx.resume();
 
-        const freq = keyMap.find((k) => k.key === key)?.note;
-        if (!freq) return;
+        const mapping = findNoteByKey(key);
+        if (!mapping) return;
+
+        const freq = mapping.note;
 
         const osc = audioCtx.createOscillator();
         const gain = audioCtx.createGain();
@@ -156,16 +233,18 @@
 
         const now = audioCtx.currentTime;
 
-        // CLEAN ENVELOPE
+        const baseGain = 0.22;
+        const compensatedGain = baseGain * loudnessCompensation(freq);
+
         gain.gain.cancelScheduledValues(now);
         gain.gain.setValueAtTime(0, now);
-        gain.gain.linearRampToValueAtTime(0.15, now + 0.05);
+        gain.gain.linearRampToValueAtTime(compensatedGain, now + 0.05);
 
         osc.connect(gain).connect(masterGain);
         osc.start();
 
         activeNotes.set(key, { osc, gain });
-        setKeyActive(key, true);
+        setKeyActive(mapping.keys[0], true);
       }
 
       function stopNote(key) {
@@ -181,7 +260,9 @@
         note.osc.stop(now + 0.3);
 
         activeNotes.delete(key);
-        setKeyActive(key, false);
+
+        const mapping = findNoteByKey(key);
+        if (mapping) setKeyActive(mapping.keys[0], false);
       }
 
       function setKeyActive(key, active) {
@@ -189,7 +270,8 @@
         if (el) el.classList.toggle("active", active);
       }
 
-      /* Keyboard events */
+      /* ===== KEYBOARD EVENTS ===== */
+
       document.addEventListener("keydown", (e) => {
         if (!e.repeat) startNote(e.key.toLowerCase());
       });
@@ -198,9 +280,10 @@
         stopNote(e.key.toLowerCase());
       });
 
-      /* Built-in melodies */
+      /* ===== MELODIES ===== */
+
       const melodies = {
-        scale: [
+        "C Major Scale": [
           ["q", 300],
           ["w", 300],
           ["e", 300],
@@ -208,9 +291,9 @@
           ["t", 300],
           ["y", 300],
           ["u", 300],
-          ["i", 300],
+          ["i", 600],
         ],
-        twinkle: [
+        "Twinkle Twinkle": [
           ["q", 400],
           ["q", 400],
           ["t", 400],
@@ -226,19 +309,95 @@
           ["w", 400],
           ["q", 800],
         ],
+        "Jingle Bells": [
+          ["t", 300],
+          ["t", 300],
+          ["t", 600],
+          ["t", 300],
+          ["t", 300],
+          ["t", 600],
+          ["t", 300],
+          ["y", 300],
+          ["q", 400],
+          ["w", 400],
+          ["t", 800],
+        ],
+        "Silent Night": [
+          ["y", 600],
+          ["u", 400],
+          ["y", 600],
+          ["r", 800],
+          ["y", 600],
+          ["u", 400],
+          ["y", 600],
+        ],
       };
 
       async function playMelody(name) {
         for (const [key, duration] of melodies[name]) {
           startNote(key);
-          await wait(duration);
+          await new Promise((r) => setTimeout(r, duration));
           stopNote(key);
         }
       }
 
-      function wait(ms) {
-        return new Promise((res) => setTimeout(res, ms));
+      let currentPlayback = null;
+      let stopRequested = false;
+
+      async function playMelodyByName(name) {
+        stopMelody();
+        stopRequested = false;
+
+        currentPlayback = name;
+
+        for (const [key, duration] of melodies[name]) {
+          if (stopRequested) break;
+          startNote(key);
+          await new Promise((r) => setTimeout(r, duration));
+          stopNote(key);
+        }
+
+        currentPlayback = null;
       }
+
+      function stopMelody() {
+        stopRequested = true;
+        activeNotes.forEach((_, key) => stopNote(key));
+        currentPlayback = null;
+      }
+    </script>
+
+    <script>
+      const snowContainer = document.createElement("div");
+      snowContainer.className = "snow";
+      document.body.appendChild(snowContainer);
+
+      for (let i = 0; i < 60; i++) {
+        const flake = document.createElement("div");
+        flake.className = "snowflake";
+        flake.textContent = "❄";
+        flake.style.left = Math.random() * 100 + "vw";
+        flake.style.animationDuration = 5 + Math.random() * 10 + "s";
+        flake.style.fontSize = 8 + Math.random() * 16 + "px";
+        snowContainer.appendChild(flake);
+      }
+    </script>
+
+    <script>
+      const grid = document.getElementById("melodyGrid");
+
+      Object.keys(melodies).forEach((name) => {
+        const card = document.createElement("div");
+        card.className = "melody-card";
+
+        card.innerHTML = `
+    <h3>🎵 ${name}</h3>
+    <button onclick="playMelodyByName('${name}')">▶ Play</button>
+    <button onclick="stopMelody()">■ Stop</button>
+  `;
+
+        grid.appendChild(card);
+      });
     </script>
   </body>
 </html>
