much better version

--- a/index.html
+++ b/index.html
@@ -3,132 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Keyboard Piano</title>
-    <div class="melody-grid" id="melodyGrid"></div>
 
-    <style>
-      body {
-        background: radial-gradient(circle at top, #111 0%, #000 70%);
-        font-family: system-ui, sans-serif;
-        color: white;
-        text-align: center;
-        padding: 40px;
-      }
-
-      h1 {
-        margin-bottom: 20px;
-        font-weight: 600;
-      }
-
-      .piano {
-        display: flex;
-        justify-content: center;
-        gap: 6px;
-        margin-top: 40px;
-      }
-
-      .key {
-        width: 60px;
-        height: 220px;
-        background: linear-gradient(#fff, #ddd);
-        border-radius: 8px;
-        box-shadow: inset 0 -6px 0 #bbb, 0 10px 30px rgba(0, 0, 0, 0.6);
-        position: relative;
-        cursor: pointer;
-        transition: all 0.08s ease;
-      }
-
-      .key span {
-        position: absolute;
-        bottom: 12px;
-        text-align: center;
-        font-weight: bold;
-        color: #333;
-      }
-
-      .key.active {
-        background: linear-gradient(#4cf, #29b);
-        box-shadow: 0 0 25px #3cf, inset 0 -4px 0 #1a8;
-        transform: translateY(4px);
-      }
-
-      .controls {
-        margin-top: 40px;
-      }
-
-      button {
-        background: #222;
-        color: #fff;
-        border: 1px solid #555;
-        padding: 10px 20px;
-        margin: 6px;
-        border-radius: 6px;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background: #333;
-      }
-
-      body {
-        background: radial-gradient(
-            circle at top,
-            rgba(255, 255, 255, 0.15),
-            transparent 60%
-          ),
-          url("https://images.unsplash.com/photo-1544273677-c433136021d4?q=80&w=1920")
-            center/cover fixed;
-        overflow-x: hidden;
-      }
-
-      /* Snow container */
-      .snow {
-        position: fixed;
-        inset: 0;
-        pointer-events: none;
-        z-index: 5;
-      }
-
-      .snowflake {
-        position: absolute;
-        top: -10px;
-        color: white;
-        opacity: 0.8;
-        font-size: 12px;
-        animation: fall linear infinite;
-      }
-
-      @keyframes fall {
-        to {
-          transform: translateY(110vh);
-        }
-      }
-
-      /* Melody cards */
-      .melody-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-        gap: 20px;
-        margin-top: 50px;
-        max-width: 900px;
-        margin-inline: auto;
-      }
-
-      .melody-card {
-        background: rgba(0, 0, 0, 0.6);
-        border-radius: 16px;
-        padding: 20px;
-        box-shadow: 0 0 30px rgba(0, 255, 255, 0.15);
-        backdrop-filter: blur(6px);
-      }
-
-      .melody-card h3 {
-        margin: 0 0 12px;
-      }
-
-      .melody-card button {
-        width: 48%;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -137,267 +13,13 @@
 
     <div class="piano" id="piano"></div>
 
-    <div class="controls">
-      <button onclick="playMelody('scale')">Play Scale</button>
-      <button onclick="playMelody('twinkle')">Play Melody</button>
-    </div>
+    <div class="melody-grid" id="melodyGrid"></div>
 
-    <script>
-      const AudioContext = window.AudioContext || window.webkitAudioContext;
-      const audioCtx = new AudioContext();
-
-      /* ===== MASTER AUDIO CHAIN ===== */
-
-      const masterGain = audioCtx.createGain();
-      masterGain.gain.value = 0.6;
-
-      const compressor = audioCtx.createDynamicsCompressor();
-      compressor.threshold.value = -30;
-      compressor.knee.value = 40;
-      compressor.ratio.value = 16;
-      compressor.attack.value = 0.003;
-      compressor.release.value = 0.35;
-
-      const lowpass = audioCtx.createBiquadFilter();
-      lowpass.type = "lowpass";
-      lowpass.frequency.value = 6000;
-
-      masterGain
-        .connect(compressor)
-        .connect(lowpass)
-        .connect(audioCtx.destination);
-
-      /* ===== KEY MAP ===== */
-
-      const keyMap = [
-        { keys: ["q"], note: 261.63 }, // C4
-        { keys: ["w"], note: 293.66 },
-        { keys: ["e"], note: 329.63 },
-        { keys: ["r"], note: 349.23 },
-        { keys: ["t"], note: 392.0 },
-        { keys: ["y", "z"], note: 440.0 }, // Y / Z
-        { keys: ["u"], note: 493.88 },
-        { keys: ["i"], note: 523.25 },
-        { keys: ["o"], note: 587.33 },
-        { keys: ["p"], note: 659.25 },
-        { keys: ["[", "š"], note: 698.46 }, // [ / Š
-        { keys: ["]", "đ"], note: 783.99 }, // ] / Đ
-        { keys: ["\\", "ž"], note: 880.0 }, // \ / Ž
-      ];
-
-      const activeNotes = new Map();
-      const piano = document.getElementById("piano");
-
-      /* ===== UI KEYS (use first label only) ===== */
-
-      keyMap.forEach((k) => {
-        const div = document.createElement("div");
-        div.className = "key";
-        div.dataset.key = k.keys[0];
-
-        div.innerHTML = `<span>${k.keys[0].toUpperCase()}</span>`;
-
-        div.addEventListener("mousedown", () => startNote(k.keys[0]));
-        div.addEventListener("mouseup", () => stopNote(k.keys[0]));
-        div.addEventListener("mouseleave", () => stopNote(k.keys[0]));
-
-        piano.appendChild(div);
-      });
-
-      /* ===== LOUDNESS COMPENSATION ===== */
-
-      function loudnessCompensation(freq) {
-        const reference = 440;
-        return Math.pow(reference / freq, 0.3);
-      }
-
-      function findNoteByKey(key) {
-        return keyMap.find((k) => k.keys.includes(key));
-      }
-
-      function startNote(key) {
-        if (activeNotes.has(key)) return;
-
-        audioCtx.resume();
-
-        const mapping = findNoteByKey(key);
-        if (!mapping) return;
-
-        const freq = mapping.note;
-
-        const osc = audioCtx.createOscillator();
-        const gain = audioCtx.createGain();
-
-        osc.type = "sine";
-        osc.frequency.value = freq;
-
-        const now = audioCtx.currentTime;
-
-        const baseGain = 0.22;
-        const compensatedGain = baseGain * loudnessCompensation(freq);
-
-        gain.gain.cancelScheduledValues(now);
-        gain.gain.setValueAtTime(0, now);
-        gain.gain.linearRampToValueAtTime(compensatedGain, now + 0.05);
-
-        osc.connect(gain).connect(masterGain);
-        osc.start();
-
-        activeNotes.set(key, { osc, gain });
-        setKeyActive(mapping.keys[0], true);
-      }
-
-      function stopNote(key) {
-        const note = activeNotes.get(key);
-        if (!note) return;
-
-        const now = audioCtx.currentTime;
-
-        note.gain.gain.cancelScheduledValues(now);
-        note.gain.gain.setValueAtTime(note.gain.gain.value, now);
-        note.gain.gain.linearRampToValueAtTime(0, now + 0.25);
-
-        note.osc.stop(now + 0.3);
-
-        activeNotes.delete(key);
-
-        const mapping = findNoteByKey(key);
-        if (mapping) setKeyActive(mapping.keys[0], false);
-      }
-
-      function setKeyActive(key, active) {
-        const el = document.querySelector(`.key[data-key="${key}"]`);
-        if (el) el.classList.toggle("active", active);
-      }
-
-      /* ===== KEYBOARD EVENTS ===== */
-
-      document.addEventListener("keydown", (e) => {
-        if (!e.repeat) startNote(e.key.toLowerCase());
-      });
-
-      document.addEventListener("keyup", (e) => {
-        stopNote(e.key.toLowerCase());
-      });
-
-      /* ===== MELODIES ===== */
-
-      const melodies = {
-        "C Major Scale": [
-          ["q", 300],
-          ["w", 300],
-          ["e", 300],
-          ["r", 300],
-          ["t", 300],
-          ["y", 300],
-          ["u", 300],
-          ["i", 600],
-        ],
-        "Twinkle Twinkle": [
-          ["q", 400],
-          ["q", 400],
-          ["t", 400],
-          ["t", 400],
-          ["y", 400],
-          ["y", 400],
-          ["t", 800],
-          ["r", 400],
-          ["r", 400],
-          ["e", 400],
-          ["e", 400],
-          ["w", 400],
-          ["w", 400],
-          ["q", 800],
-        ],
-        "Jingle Bells": [
-          ["t", 300],
-          ["t", 300],
-          ["t", 600],
-          ["t", 300],
-          ["t", 300],
-          ["t", 600],
-          ["t", 300],
-          ["y", 300],
-          ["q", 400],
-          ["w", 400],
-          ["t", 800],
-        ],
-        "Silent Night": [
-          ["y", 600],
-          ["u", 400],
-          ["y", 600],
-          ["r", 800],
-          ["y", 600],
-          ["u", 400],
-          ["y", 600],
-        ],
-      };
-
-      async function playMelody(name) {
-        for (const [key, duration] of melodies[name]) {
-          startNote(key);
-          await new Promise((r) => setTimeout(r, duration));
-          stopNote(key);
-        }
-      }
-
-      let currentPlayback = null;
-      let stopRequested = false;
-
-      async function playMelodyByName(name) {
-        stopMelody();
-        stopRequested = false;
-
-        currentPlayback = name;
-
-        for (const [key, duration] of melodies[name]) {
-          if (stopRequested) break;
-          startNote(key);
-          await new Promise((r) => setTimeout(r, duration));
-          stopNote(key);
-        }
-
-        currentPlayback = null;
-      }
-
-      function stopMelody() {
-        stopRequested = true;
-        activeNotes.forEach((_, key) => stopNote(key));
-        currentPlayback = null;
-      }
-    </script>
-
-    <script>
-      const snowContainer = document.createElement("div");
-      snowContainer.className = "snow";
-      document.body.appendChild(snowContainer);
-
-      for (let i = 0; i < 60; i++) {
-        const flake = document.createElement("div");
-        flake.className = "snowflake";
-        flake.textContent = "❄";
-        flake.style.left = Math.random() * 100 + "vw";
-        flake.style.animationDuration = 5 + Math.random() * 10 + "s";
-        flake.style.fontSize = 8 + Math.random() * 16 + "px";
-        snowContainer.appendChild(flake);
-      }
-    </script>
-
-    <script>
-      const grid = document.getElementById("melodyGrid");
-
-      Object.keys(melodies).forEach((name) => {
-        const card = document.createElement("div");
-        card.className = "melody-card";
-
-        card.innerHTML = `
-    <h3>🎵 ${name}</h3>
-    <button onclick="playMelodyByName('${name}')">▶ Play</button>
-    <button onclick="stopMelody()">■ Stop</button>
-  `;
-
-        grid.appendChild(card);
-      });
-    </script>
+    <!-- JS -->
+    <script src="js/audio.js"></script>
+    <script src="js/piano.js"></script>
+    <script src="js/melodies.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/snow.js"></script>
   </body>
 </html>
